--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">TestFixer</string>
+    <string name="EXTRA_DETAIL_ITEM">extra_object</string>
 </resources>
